Fixed visual bug where contact photos get cut off on landscape mode

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,5 +1,5 @@
 .contact{
-  height: 40vh;
+  min-height: 40vh;
   max-width: 70vw;
   margin-left: 30vw;
   overflow: hidden;
